# Parametrization

./: .gitignore  Dockerfile  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
parametrization/: cli.py  parametrization.py
parametrization/test/: test_parameterization.py
test/: test_parameterization.py
