[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parametrization"
version = "0.0.3"
authors = [
  { name="Simone Mesiha", email="simonemesiha12@gmail.com" },
]
description = "A package to calculate the volume of a sphere using Foo et al. parameterization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SimoneMesiha/Parametrization"

[project.scripts]
parametrization-cli = "parametrization.cli:main"
